<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/title_home"
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:enabled="true"
        />

    <item
        android:title="@string/title_notifications"
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/email"
        android:enabled="true" />

    <item
        android:title="@string/title_alarm"
        android:id="@+id/navigation_alarm"
        android:icon="@drawable/notification"
        android:enabled="true"

        />

    <item
        android:title="@string/title_mypage"
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/user"
        android:enabled="true"

        />


</menu>
    <!--app:showAsAction="ifRoom"-->